[tool.poetry]
name = "repl_python3_newGrabWebScrape"
version = "0.1.0"
description = ""
authors = ["Aditya21Hebbar <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.3.0"
bs4 = "^0.0.1"
pandas = "^1.4.3"
browsermob-proxy = "^0.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
